Updates for config server

--- a/config-server/src/main/resources/.env.example
+++ b/config-server/src/main/resources/.env.example
@@ -1,3 +1,4 @@
 # GitHub credentials for Spring Config Server
 GIT_USERNAME=your-github-username
 GIT_PASSWORD=your-github-personal-access-token
+ENCRYPT_KEY=your-encrypt-key# needs to be env variable!
