--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -3,19 +3,20 @@ spring:
     name: config-server
   cloud:
     config:
-          server:
-            git:
-              uri: https://github.com/vanja-djenadija/config-repo.git
-              searchPaths:
-                - incident-service
-                - moderation-service
-                - auth-service
-                - user-service
-                - analytics-service
-                - alert-service
-                - nlp-service
-              username: ${GIT_USERNAME}
-              password: ${GIT_PASSWORD}
-
+      server:
+        encrypt:
+          enabled: false
+        git:
+          uri: https://github.com/vanja-djenadija/config-repo.git
+          searchPaths:
+            - incident-service
+            - moderation-service
+            - auth-service
+            - user-service
+            - analytics-service
+            - alert-service
+            - nlp-service
+          username: ${GIT_USERNAME}
+          password: ${GIT_PASSWORD}
 server:
   port: 8888
