--- a/incident-service/src/main/resources/application.yaml
+++ b/incident-service/src/main/resources/application.yaml
@@ -2,6 +2,6 @@ spring:
   application:
     name: incident-service
   profiles:
-    active: test
+    active: default
   config:
     import: "configserver:http://localhost:8888"
