Gateway gets routes from config-server

--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -1,3 +1,5 @@
+server:
+  port: 8888
 spring:
   application:
     name: config-server
@@ -16,7 +18,6 @@ spring:
             - analytics-service
             - alert-service
             - nlp-service
+            - gateway-service
           username: ${GIT_USERNAME}
           password: ${GIT_PASSWORD}
-server:
-  port: 8888
